added manyh of thing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,11 @@
  @plugin "daisyui" {
   themes: light --default;
  }
+
+ @plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: blue;
+  --color-secondary: teal;
+  --color-accent: #FF3811;
+}
